--- a/index.html
+++ b/index.html
@@ -2625,6 +2625,13 @@
 </tr>
 
 <tr>
+<td>Alias Enterprises</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alice Cooper</td>
 <td>2014</td>
 <td>Dynamite</td>
@@ -4913,6 +4920,20 @@
 </tr>
 
 <tr>
+<td>ArmorQuest</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>ArmorQuest: Genesis</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Army Attack</td>
 <td>1964</td>
 <td>Charlton</td>
@@ -5666,6 +5687,13 @@
 <td>1952</td>
 <td>Ace</td>
 <td><a href="AtomicWar/AtomicWar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Atomik Mike</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7995,6 +8023,13 @@
 <td>2013</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blackbeard Legacy</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12306,6 +12341,13 @@
 </tr>
 
 <tr>
+<td>Comic Book Digest</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comic Book History Of Comics</td>
 <td>2012</td>
 <td>IDW</td>
@@ -14099,6 +14141,13 @@
 </tr>
 
 <tr>
+<td>Daniel - Profit Of Dreams: Graphic Novel</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daniel Boone</td>
 <td>1965</td>
 <td>Gold Key</td>
@@ -14659,6 +14708,20 @@
 </tr>
 
 <tr>
+<td>David's Mighty Men</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>David: The Shepherd's Song</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Davy Crockett</td>
 <td>1951</td>
 <td>Avon</td>
@@ -14999,6 +15062,13 @@
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deal With The Devil</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15559,6 +15629,13 @@
 <td>2003</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Devil's Keeper</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17179,6 +17256,13 @@
 </tr>
 
 <tr>
+<td>Eb'nn</td>
+<td>1986</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>EC Artists</td>
 <td>2013</td>
 <td>Fantagraphics</td>
@@ -17270,10 +17354,10 @@
 </tr>
 
 <tr>
-<td>Eb'nn</td>
-<td>1986</td>
-<td>Now</td>
-<td><a href="NowComics/NowComics.html">Details</a></td>
+<td>Ed's Terrestrials</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17701,6 +17785,13 @@
 <td>1990</td>
 <td>Epic</td>
 <td><a href="ElsewherePrince/ElsewherePrince.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elsinore</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21364,6 +21455,13 @@
 </tr>
 
 <tr>
+<td>Gimoles</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Girl Comics</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -24304,6 +24402,13 @@
 </tr>
 
 <tr>
+<td>Hyper-Actives</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hyperkind</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -24591,6 +24696,13 @@
 </tr>
 
 <tr>
+<td>Imaginaries</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Imageinary Drugs</td>
 <td>2018</td>
 <td>IDW</td>
@@ -24630,6 +24742,13 @@
 <td>1989</td>
 <td>MPI</td>
 <td><a href="Impact/Impact.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Imperial Dragons</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26166,6 +26285,13 @@
 </tr>
 
 <tr>
+<td>Johnny Caronte: Zombie Detective &amp; The Revolver</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Johnny Cash: I See a Darkness</td>
 <td>2009</td>
 <td>Abrams</td>
@@ -26366,6 +26492,13 @@
 <td>2013</td>
 <td>Dark Horse</td>
 <td><a href="JudgeDreddAliens/JudgeDreddAliens.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judo Girl</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27017,6 +27150,13 @@
 <td>2017</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Killer Stunts</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28133,6 +28273,20 @@
 </tr>
 
 <tr>
+<td>Legend Of Isis</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legend Of Isis: Beginnings</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Legend Of Korra</td>
 <td>2017</td>
 <td>Dark Horse</td>
@@ -28291,6 +28445,13 @@
 <td>1452</td>
 <td>Creator</td>
 <td><a href="DaVinci/DaVinci.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lethal Instinct</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29355,6 +29516,20 @@
 <td>2009</td>
 <td>12 Gauge</td>
 <td><a href="12GaugeComics/12GaugeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lullaby</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lullaby: Once Upon A Time</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34363,6 +34538,13 @@
 </tr>
 
 <tr>
+<td>Odyssey: Absolute Power</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Of Myths And Men</td>
 <td>1987</td>
 <td>Blackthorne</td>
@@ -34636,6 +34818,13 @@
 </tr>
 
 <tr>
+<td>Opposite Forces</td>
+<td>2003</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Optic Nerve</td>
 <td>1995</td>
 <td>Drawn &amp; Quarterly</td>
@@ -34745,6 +34934,13 @@
 <td>2000</td>
 <td>DC</td>
 <td><a href="Orion2000/Orion2000.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Orion</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35046,6 +35242,13 @@
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pakkin's Land</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35427,6 +35630,13 @@
 </tr> 
 
 <tr>
+<td>Penny And Aggie</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Penny Arcade</td>
 <td>2005</td>
 <td>Dark Horse</td>
@@ -35794,6 +36004,20 @@
 <td>2007</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pistolfist: Original Script</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pistolfist: Revolutionary Warrior</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37813,6 +38037,13 @@
 <td>1995</td>
 <td>Dark Horse</td>
 <td><a href="Revelations/Revelations.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Revere</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40815,6 +41046,13 @@
 </tr>
 
 <tr>
+<td>Six Million Dollar Man</td>
+<td>1976</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Six-Gun Gorilla</td>
 <td>2013</td>
 <td>Boom!</td>
@@ -40829,10 +41067,10 @@
 </tr>
 
 <tr>
-<td>Six Million Dollar Man</td>
-<td>1976</td>
-<td>Charlton</td>
-<td><a href="Charlton/Charlton.html">Details</a></td>
+<td>Sixgun Samurai</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41373,6 +41611,13 @@
 <td>2009</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Soulcatcher</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43784,6 +44029,13 @@
 </tr>
 
 <tr>
+<td>Ted Dekker's Saint: A Graphic Introduction</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ted McKeever</td>
 <td>1968</td>
 <td>Creator</td>
@@ -43903,6 +44155,13 @@
 </tr>
 
 <tr>
+<td>Tempest</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Temple Snare</a>
 <td>1990</td>
 <td>MU Press</td>
@@ -43921,6 +44180,20 @@
 <td>1997</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tenth Muse</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tenth Muse: The Odyssey</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44806,6 +45079,13 @@
 </tr>
 
 <tr>
+<td>Toy Box</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Toy Story</td>
 <td>1995</td>
 <td>Pixar</td>
@@ -45265,6 +45545,13 @@
 <td>2016</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Twin Blades: The Killing Words</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45968,6 +46255,13 @@
 </tr>
 
 <tr>
+<td>Valkyries</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Valley Of The Dinosaurs</td>
 <td>1975</td>
 <td>Charlton</td>
@@ -46238,6 +46532,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="Vicki/Vicki.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Victoria's Secret Service</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48489,6 +48790,13 @@
 
 <tr>
 <td>XII</td>
+<td>2005</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>XII</td>
 <td>2018</td>
 <td>Alterna</td>
 <td><a href="Alterna/Alterna.html">Details</a></td>
@@ -48597,6 +48905,13 @@
 <td>1944</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yenny</td>
+<td>2006</td>
+<td>Alias</td>
+<td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
