--- a/index.html
+++ b/index.html
@@ -7816,6 +7816,13 @@
 </tr>
 
 <tr>
+<td>Billy The Kid Book Of Picture Stories</td>
+<td>1958</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Billy The Kid's Old Timey Oddities</td>
 <td>2005</td>
 <td>Dark Horse</td>
@@ -8915,6 +8922,13 @@
 </tr>
 
 <tr>
+<td>Bo-Peep And Little Boy Blue</td>
+<td>1929</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bob Burden's Original Mysterymen Presents</td>
 <td>1999</td>
 <td>Dark Horse</td>
@@ -9740,10 +9754,24 @@
 </tr>
 
 <tr>
+<td>Bubbles</td>
+<td>1921</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buck Duck</td>
 <td>1993</td>
 <td>Atlas</td>
 <td><a href="BuckDuck/BuckDuck.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buck Jones Annual</td>
+<td>1957</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10013,6 +10041,20 @@
 </tr>
 
 <tr>
+<td>Butterfly</td>
+<td>1904</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Butterfly Annual</td>
+<td>1939</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Butterfly Gunn</td>
 <td>2000</td>
 <td>Arrow</td>
@@ -10220,6 +10262,13 @@
 <td>2010</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Condor Space-Man Of The Unknown Moon</td>
+<td>1950</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11217,6 +11266,13 @@
 </tr>
 
 <tr>
+<td>Charlie Chaplin Fun Book</td>
+<td>1915</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Charlie's Angels</td>
 <td>2018</td>
 <td>Dynamite</td>
@@ -11396,6 +11452,13 @@
 <td>1974</td>
 <td>Publisher</td>
 <td><a href="ChickPublications/ChickPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chick's Own</td>
+<td>1920</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12320,6 +12383,13 @@
 </tr>
 
 <tr>
+<td>Comet</td>
+<td>1949</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comet Man</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -12366,6 +12436,27 @@
 <td>1946</td>
 <td>Fawcett</td>
 <td><a href="ComicComics/ComicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Cuts</td>
+<td>1890</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Home Journal</td>
+<td>1895</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Life</td>
+<td>1920</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12726,6 +12817,13 @@
 </tr>
 
 <tr>
+<td>Confessions Library</td>
+<td>1959</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Confidential Diary</td>
 <td>1962</td>
 <td>Charlton</td>
@@ -12999,10 +13097,24 @@
 </tr>
 
 <tr>
+<td>Cowboy Comics</td>
+<td>1950</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cowboy Love</td>
 <td>1955</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cowboy Picture Library</td>
+<td>1957</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13059,6 +13171,13 @@
 <td>1940</td>
 <td>Quality</td>
 <td><a href="CrackComics/CrackComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crackers</td>
+<td>1929</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18712,6 +18831,13 @@
 </tr>
 
 <tr>
+<td>Famous Romance Library</td>
+<td>1956</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fan'toons</a>
 <td>1986</td>
 <td>MU Press</td>
@@ -18947,6 +19073,13 @@
 <td>1987</td>
 <td>Northstar</td>
 <td><a href="Faust/Faust.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Favorite Comic</td>
+<td>1911</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19276,6 +19409,27 @@
 <td>2005</td>
 <td>AIT Planet Lar</td>
 <td><a href="AITPlanetLar/AITPlanetLar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Film Fun</td>
+<td>1920</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Film Fun Annual</td>
+<td>1938</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Film Picture Stories</td>
+<td>1934</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20398,6 +20552,20 @@
 </tr>
 
 <tr>
+<td>Funny Wonder</td>
+<td>1893</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Funny Wonder Annual</td>
+<td>1937</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Furkindred</a>
 <td>1991</td>
 <td>MU Press</td>
@@ -21497,6 +21665,20 @@
 </tr>
 
 <tr>
+<td>Girls' Crystal</td>
+<td>1953</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Girls' Crystal Annual</td>
+<td>1946</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Girls' Life</td>
 <td>1954</td>
 <td>Marvel</td>
@@ -21749,6 +21931,13 @@
 </tr>
 
 <tr>
+<td>Golden</td>
+<td>1937</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Golden Age Men Of Mystery</td>
 <td>1996</td>
 <td>AC Comics</td>
@@ -21774,6 +21963,13 @@
 <td>2002</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Golden Book Of Comics</td>
+<td>1950</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22893,6 +23089,13 @@
 <td>1995</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Happy Days</td>
+<td>1938</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24668,6 +24871,13 @@
 </tr>
 
 <tr>
+<td>Illustrated Chips</td>
+<td>1890</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Image Comics</td>
 <td>1992</td>
 <td>Publisher</td>
@@ -25858,6 +26068,20 @@
 </tr>
 
 <tr>
+<td>Jester</td>
+<td>1924</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jester And Wonder</td>
+<td>1902</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jet Aces</td>
 <td>1952</td>
 <td>Fiction House</td>
@@ -26051,6 +26275,13 @@
 <td>1942</td>
 <td>Eastern Color</td>
 <td><a href="JingleJangle/JingleJangle.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jingles</td>
+<td>1934</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26334,10 +26565,24 @@
 </tr>
 
 <tr>
+<td>Joker</td>
+<td>1927</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joker Comics</td>
 <td>1941</td>
 <td>Atlas</td>
 <td><a href="Joker/joker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jolly Comic</td>
+<td>1935</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26604,6 +26849,13 @@
 <td>1969</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jungle Jinks</td>
+<td>1923</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27230,6 +27482,13 @@
 </tr>
 
 <tr>
+<td>Kinema Comic</td>
+<td>1920</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>King</td>
 <td>1993</td>
 <td>Fantagraphics</td>
@@ -27566,6 +27825,13 @@
 </tr>
 
 <tr>
+<td>Kit Carson's Cowboy Annual</td>
+<td>1954</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kitchen</td>
 <td>2015</td>
 <td>Vertigo</td>
@@ -27643,10 +27909,31 @@
 </tr>
 
 <tr>
+<td>Knockout</td>
+<td>1939</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Knockout Adventures</td>
 <td>1953</td>
 <td>Fiction House</td>
 <td><a href="FictionHouse/FictionHouse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Knockout Annual</td>
+<td>1957</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Knockout Fun Book</td>
+<td>1941</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27997,6 +28284,13 @@
 <td>2019</a>
 <td>Conundrum Press</td>
 <td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Larks</td>
+<td>1927</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28683,6 +28977,13 @@
 <td>1961</td>
 <td>Marvel</td>
 <td><a href="LindaCarterStudentNurse/LindaCarterStudentNurse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lion</td>
+<td>1952</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30241,6 +30542,13 @@
 </tr>
 
 <tr>
+<td>Marilyn</td>
+<td>1955</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Marines Attack</td>
 <td>1964</td>
 <td>Charlton</td>
@@ -31434,6 +31742,13 @@
 <td>2014</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Merry And Bright</td>
+<td>1910</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32903,6 +33218,13 @@
 <td>1949</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>My Favorite</td>
+<td>1928</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35644,6 +35966,13 @@
 </tr>
 
 <tr>
+<td>Penny Wonder</td>
+<td>1912</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Perdita Durango</td>
 <td>1992</td>
 <td>Rivages</td>
@@ -36164,6 +36493,34 @@
 <td>1992</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Playbox</td>
+<td>1905</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Playbox Annual</td>
+<td>1909</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Playhour Pictures</td>
+<td>1954</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Playtime</td>
+<td>1919</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37026,6 +37383,13 @@
 </tr>
 
 <tr>
+<td>Puck</td>
+<td>1904</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pudgy Pig</td>
 <td>1958</td>
 <td>Charlton</td>
@@ -37229,6 +37593,20 @@
 </tr>
 
 <tr>
+<td>Radio Fun</td>
+<td>1938</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Radio Fun Annual</td>
+<td>1940</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rabbit Head</td>
 <td>2004</td>
 <td>Alternative Comics</a>
@@ -37310,6 +37688,20 @@
 <td>1981</td>
 <td>Paramount</td>
 <td><a href="IJRLA/IJRLA.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rainbow</td>
+<td>1914</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rainbow Annual</td>
+<td>1927</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38907,6 +39299,13 @@
 </tr>
 
 <tr>
+<td>Roxy</td>
+<td>1958</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Roy Crane</td>
 <td>1901</td>
 <td>Creator</td>
@@ -39567,6 +39966,20 @@
 <td>1920</td>
 <td>Publisher</td>
 <td><a href="Scholastic/Scholastic.html">Details</a></td>
+</tr>
+
+<tr>
+<td>School Friend</td>
+<td>1950</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>School Friend Picture Library</td>
+<td>1962</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43315,6 +43728,20 @@
 </tr>
 
 <tr>
+<td>Sun</td>
+<td>1952</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sun Comic</td>
+<td>1949</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sun Girl</td>
 <td>1948</td>
 <td>Timely</td>
@@ -43340,6 +43767,13 @@
 <td>1985</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sunbeam</td>
+<td>1926</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43382,6 +43816,13 @@
 <td>1938</td>
 <td>Dell</td>
 <td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Super Detective Library</td>
+<td>1953</td>
+<td>Amalgamated</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
